--- a/packages/qiao-webpack/package.json
+++ b/packages/qiao-webpack/package.json
@@ -34,6 +34,7 @@
 		"mini-css-extract-plugin": "^2.6.1",
 		"postcss": "^8.4.19",
 		"postcss-loader": "^7.0.1",
+        "qiao-cli": "^1.0.5",
 		"sass": "^1.56.1",
 		"sass-loader": "^13.2.0",
 		"style-loader": "^3.3.1",
