--- a/packages/qiao-config/package.json
+++ b/packages/qiao-config/package.json
@@ -1,24 +1,35 @@
 {
-  "name": "qiao-config",
-  "version": "0.4.1",
-  "description": "json config to local file",
-  "keywords": [
-    "json",
-    "config",
-    "local",
-    "file",
-    "database"
-  ],
-  "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://code.insistime.com/qiao-config",
-  "license": "MIT",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
-  },
-  "scripts": {},
-  "dependencies": {
-    "qiao-file": "^1.0.5"
-  }
+    "name": "qiao-config",
+    "version": "0.4.1",
+    "description": "json config to local file",
+    "keywords": [
+        "json",
+        "config",
+        "local",
+        "file",
+        "database"
+    ],
+    "author": "uikoo9 <uikoo9@qq.com>",
+    "homepage": "https://code.insistime.com/qiao-config",
+    "license": "MIT",
+    "main": "index.js",
+    "module": "src/index.js",
+    "sideEffets": false,
+    "files": [
+        "src"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
+    },
+    "bugs": {
+        "url": "https://github.com/uikoo9/qiao-monorepo/issues"
+    },
+    "scripts": {
+        "build": "rollup --config _config.rollup.js",
+        "eslint": "eslint . --ext .js -c _config.eslint.js",
+        "eslintfix": "eslint . --ext .js --fix -c _config.eslint.js",
+        "test": "jest --config _config.jest.js",
+        "prepublish": "npm run build && npm run eslintfix && npm run test"
+    }
 }
