--- a/packages/qiao-electron-cli/package.json
+++ b/packages/qiao-electron-cli/package.json
@@ -27,6 +27,7 @@
 		"electron-packager": "^17.1.1"
 	},
 	"optionalDependencies": {
-		"appdmg": "^0.6.4"
+		"appdmg": "^0.6.4",
+        "qiao-cos": "^2.1.6"
 	}
 }
