--- a/packages/qiao-log/package.json
+++ b/packages/qiao-log/package.json
@@ -22,6 +22,8 @@
     "build": "rollup --config _config.rollup.js"
   },
   "dependencies": {
+    "date-format": "^4.0.14",
+    "debug": "^4.3.4",
     "log4js": "^6.7.1"
   }
 }
