--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "root",
   "private": true,
   "scripts": {
+    "prepare": "husky install",
     "check": "qlerna ncu ./packages",
     "ncu": "lerna exec --ignore=qiao-cli 'ncu -u'",
     "clean": "lerna clean -y",
@@ -9,24 +10,27 @@
     "build": "lerna run build --ignore=qiao-electron-demo",
     "prettier": "prettier --write .",
     "eslintfix": "eslint . --ext .js --fix",
-    "prepublish": "npm run build && npm run prettier && npm run eslintfix",
+    "postinstall": "npm run build && npm run prettier && npm run eslintfix",
     "dc": "qlerna dc ./packages",
     "ls": "lerna ls -l",
     "pkg": "qlerna pkg ./packages",
     "dpkg": "qlerna pkg ./packages 1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.4.0",
+    "@commitlint/config-conventional": "^17.4.0",
     "@rollup/plugin-json": "^5.0.2",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "prettier": "^2.8.0",
-    "qiao-webpack": "^1.3.6",
     "qiao-lerna": "^1.2.5",
+    "qiao-webpack": "^1.3.6",
     "rollup": "^3.5.1"
   }
 }
