--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "lerna run build --ignore=qiao-electron-demo",
     "prettier": "prettier --write .",
     "eslintfix": "eslint . --ext .js --fix",
-    "postinstall": "npm run clean && npm run init && npm run build && npm run prettier && npm run eslintfix",
+    "lint": "npm run prettier && npm run eslintfix",
+    "postinstall": "npm run clean && npm run init && npm run build && npm run lint",
     "dc": "qlerna dc ./packages",
     "ls": "lerna ls -l",
     "pkg": "qlerna pkg ./packages",
@@ -28,6 +29,7 @@
     "husky": "^8.0.3",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
     "qiao-lerna": "^1.2.7",
     "qiao-webpack": "^1.3.8",
