--- a/packages/qiao-cos/package.json
+++ b/packages/qiao-cos/package.json
@@ -30,7 +30,7 @@
     "url": "https://github.com/uikoo9/qiao-monorepo/issues"
   },
   "scripts": {
-    "build": "rollup --config _config.rollup.js"
+    "build": "rollup -c"
   },
   "dependencies": {
     "cos-nodejs-sdk-v5": "^2.11.19",
