--- a/packages/qiao-npms/package.json
+++ b/packages/qiao-npms/package.json
@@ -22,7 +22,7 @@
     "url": "https://github.com/uikoo9/qiao-monorepo/issues"
   },
   "scripts": {
-    "build": "rollup --config _config.rollup.js"
+    "build": "rollup -c"
   },
   "dependencies": {
     "libnpmsearch": "^6.0.1",
