--- a/packages/qiao.ls.js/package.json
+++ b/packages/qiao.ls.js/package.json
@@ -25,7 +25,7 @@
     "url": "https://github.com/uikoo9/qiao-monorepo/issues"
   },
   "scripts": {
-    "build": "rollup --config _config.rollup.js",
+    "build": "rollup -c",
     "test": "jest --config _config.jest.js"
   }
 }
