--- a/packages/offline-to-online/package.json
+++ b/packages/offline-to-online/package.json
@@ -24,6 +24,6 @@
     "url": "https://github.com/uikoo9/qiao-monorepo/issues"
   },
   "scripts": {
-    "build": "rollup --config _config.rollup.js"
+    "build": "rollup -c"
   }
 }
