--- a/packages/qiao-cli/package.json
+++ b/packages/qiao-cli/package.json
@@ -24,7 +24,7 @@
     "url": "https://github.com/uikoo9/qiao-monorepo/issues"
   },
   "scripts": {
-    "build": "rollup --config _config.rollup.js"
+    "build": "rollup -c"
   },
   "dependencies": {
     "colors": "^1.4.0",
