--- a/packages/qiao-file/package.json
+++ b/packages/qiao-file/package.json
@@ -19,6 +19,6 @@
     "url": "https://github.com/uikoo9/qiao-monorepo/issues"
   },
   "scripts": {
-    "build": "rollup --config _config.rollup.js"
+    "build": "rollup -c"
   }
 }
