--- a/packages/qiao-is-online/package.json
+++ b/packages/qiao-is-online/package.json
@@ -24,7 +24,7 @@
     "url": "https://github.com/uikoo9/qiao-monorepo/issues"
   },
   "scripts": {
-    "build": "rollup --config _config.rollup.js"
+    "build": "rollup -c"
   },
   "dependencies": {
     "offline-to-online": "^1.0.3",
