--- a/packages/qiao-json/package.json
+++ b/packages/qiao-json/package.json
@@ -16,6 +16,6 @@
     "url": "git+https://github.com/uikoo9/qiao-monorepo.git"
   },
   "scripts": {
-    "build": "rollup --config _config.rollup.js"
+    "build": "rollup -c"
   }
 }
