--- a/packages/qiao-lerna/package.json
+++ b/packages/qiao-lerna/package.json
@@ -27,7 +27,7 @@
     "url": "https://github.com/uikoo9/qiao-monorepo/issues"
   },
   "scripts": {
-    "build": "rollup --config _config.rollup.js"
+    "build": "rollup -c"
   },
   "dependencies": {
     "npm-check-updates": "^16.6.3",
