--- a/packages/qiao-ping/package.json
+++ b/packages/qiao-ping/package.json
@@ -23,7 +23,7 @@
     "url": "https://github.com/uikoo9/qiao-monorepo/issues"
   },
   "scripts": {
-    "build": "rollup --config _config.rollup.js"
+    "build": "rollup -c"
   },
   "dependencies": {
     "ping": "^0.4.2"
