chore: jest.config.js

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslintfix": "eslint . --ext .js --fix",
     "lint": "npm run prettier && npm run eslintfix",
     "postinstall": "npm run clean && npm run init && npm run build && npm run lint",
+    "test": "lerna run test",
     "dc": "qlerna dc ./packages",
     "ls": "lerna ls -l",
     "pkg": "qlerna pkg ./packages",
