--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "check": "qlerna ncu ./packages",
     "ncu": "lerna exec --ignore=qiao-cli 'ncu -u'",
     "clean": "lerna clean -y",
-    "init": "lerna bootstrap --ignore=qiao-electron-demo --ignore-prepublish",
+    "init": "lerna bootstrap --ignore-prepublish",
     "build": "lerna run build",
     "prettier": "prettier --write .",
     "eslintfix": "eslint . --ext .js --fix",
     "lint": "npm run prettier && npm run eslintfix",
-    "postinstall": "npm run clean && npm run init && npm run build && npm run lint",
-    "test": "lerna run test --scope=qiao-config --scope=qiao-slink --scope=qiao.cookie.js --scope=qiao.ls.js",
+    "test": "lerna run test",
+    "postinstall": "npm run clean && npm run init && npm run build && npm run lint && npm test",
     "dc": "qlerna dc ./packages",
     "ls": "lerna ls -l",
     "pkg": "qlerna pkg ./packages",
