chore: del package-lock.json

--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
     "prepare": "husky install",
     "check": "qlerna ncu ./packages",
     "ncu": "lerna exec --ignore=qiao-cli 'ncu -u'",
-    "clean": "lerna clean -y",
-    "init": "lerna bootstrap --ignore-prepublish",
+    "clean": "lerna clean -y && lerna exec 'rm -rf package-lock.json'",
+    "init": "lerna bootstrap --hoist",
     "build": "lerna run build",
     "prettier": "prettier --write .",
     "eslintfix": "eslint . --ext .js --fix",
     "lint": "npm run prettier && npm run eslintfix",
     "test": "lerna run test",
-    "postinstall": "npm run clean && npm run init && npm run build && npm run lint && npm test",
+    "postinstall": "npm run clean && npm run init && npm run build && npm run lint && npm run test",
     "dc": "qlerna dc ./packages",
     "ls": "lerna ls -l",
     "pkg": "qlerna pkg ./packages",
