--- a/packages/qiao-ajax/package.json
+++ b/packages/qiao-ajax/package.json
@@ -26,10 +26,8 @@
     "url": "https://github.com/uikoo9/qiao-monorepo/issues"
   },
   "scripts": {
-    "dev": "qwebpack dev ./webpack/qiao.webpack.js",
-    "dist": "qwebpack build ./webpack/qiao.webpack.js",
-    "analyzer": "qwebpack analyzer ./webpack/qiao.webpack.js",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "1.3.0"
