feat(qiao-short-link): qiao short link

--- a/packages/qiao-short-link/package.json
+++ b/packages/qiao-short-link/package.json
@@ -29,5 +29,6 @@
   "dependencies": {
     "qiao-ajax": "^2.8.4",
     "qs": "^6.11.0"
-  }
+  },
+  "gitHead": "03a956ab21cdab4a2f1fe3d281c7c7dd15f30525"
 }
