feat(qiao-file): isExists use fs-extra

--- a/packages/qiao-file/package.json
+++ b/packages/qiao-file/package.json
@@ -19,6 +19,10 @@
     "url": "https://github.com/uikoo9/qiao-monorepo/issues"
   },
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "test": "jest"
+  },
+  "dependencies": {
+    "fs-extra": "^11.1.0"
   }
 }
