--- a/packages/qiao-file/package.json
+++ b/packages/qiao-file/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "build": "rollup -c",
-    "test": "jest"
+    "test": "node __tests__/read-file-line-by-line.js && jest"
   },
   "dependencies": {
     "fs-extra": "^11.1.0"
