--- a/package.json
+++ b/package.json
@@ -19,21 +19,23 @@
     "dpkg": "qlerna pkg ./packages 1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.4.4",
+    "@commitlint/cli": "^17.5.1",
     "@commitlint/config-conventional": "^17.4.4",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.2.0",
-    "prettier": "^2.8.4",
-    "qiao-lerna": "^2.0.0",
-    "qiao-webpack": "^1.4.1",
-    "rollup": "^3.19.1"
+    "prettier": "^2.8.7",
+    "qiao-lerna": "^2.0.2",
+    "qiao-webpack": "^1.4.2",
+    "rollup": "^3.20.2",
+    "nx": "15.9.2",
+    "@nrwl/nx-cloud": "latest"
   }
 }
