--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "packages": ["packages/*"],
-  "version": "independent",
+  "version": "3.0.0",
   "command": {
     "version": {
       "allowBranch": "master"
