--- a/package.json
+++ b/package.json
@@ -3,42 +3,42 @@
   "private": true,
   "scripts": {
     "prepare": "husky install",
-    "check": "qlerna ncu ./packages",
-    "ncu": "lerna exec --ignore=qiao-cli 'ncu -u'",
     "clean": "lerna clean -y && lerna exec 'rm -rf package-lock.json'",
-    "init": "lerna bootstrap --hoist",
+    "init": "lerna bootstrap",
     "build": "lerna run build",
     "prettier": "prettier --write .",
     "eslintfix": "eslint . --ext .js --fix",
-    "lint": "npm run prettier && npm run eslintfix",
     "test": "lerna run test",
-    "postinstall": "npm run clean && npm run init && npm run build && npm run lint && npm run test",
-    "dc": "qlerna dc ./packages",
-    "ls": "lerna ls -l",
+    "lint": "npm run build && npm run prettier && npm run eslintfix && npm run test",
+    "postinstall": "npm run clean && npm run init && npm run lint",
+    "pb": "lerna publish",
+    "graph": "nx graph",
+    "check": "ncu && lerna exec ncu --concurrency=1",
+    "update": "ncu -u && lerna exec 'ncu -u' --concurrency=1",
     "pkg": "qlerna pkg ./packages",
-    "dpkg": "qlerna pkg ./packages 1"
+    "dpkg": "qlerna pkg ./packages dev"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.5.1",
-    "@commitlint/config-conventional": "^17.4.4",
-    "@nrwl/nx-cloud": "latest",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
-    "ava": "^5.2.0",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.37.0",
-    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
+    "ava": "^5.2.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
+    "fake-indexeddb": "^4.0.1",
+    "husky": "^8.0.3",
+    "jsdom": "^21.1.1",
     "lerna": "^6.6.1",
-    "lint-staged": "^13.2.0",
-    "nx": "15.9.2",
+    "lint-staged": "^13.2.1",
     "prettier": "^2.8.7",
-    "qiao-lerna": "^2.0.2",
-    "qiao-webpack": "^1.4.2",
-    "rollup": "^3.20.2"
+    "qiao-lerna": "^3.2.0",
+    "qiao-webpack": "^3.1.8",
+    "rollup": "^3.20.5"
   }
 }
