--- a/packages/qiao-algorithm/package.json
+++ b/packages/qiao-algorithm/package.json
@@ -9,6 +9,11 @@
   "homepage": "https://code.insistime.com/qiao-algorithm",
   "license": "MIT",
   "main": "index.js",
+  "module": "src/index.js",
+  "sideEffets": false,
+  "files": [
+    "src"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/uikoo9/qiao-web.git"
@@ -17,6 +22,24 @@
     "url": "https://github.com/uikoo9/qiao-web/issues"
   },
   "scripts": {
+    "build": "rollup -c",
     "test": "ava"
+  },
+  "nx": {
+    "namedInputs": {
+      "default": [
+        "{projectRoot}/src/**/*"
+      ]
+    },
+    "targets": {
+      "build": {
+        "inputs": [
+          "default"
+        ],
+        "outputs": [
+          "{projectRoot}/index.js"
+        ]
+      }
+    }
   }
 }
