--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
-  "packages": ["packages/*"],
   "version": "3.1.0",
+  "useWorkspaces": true,
   "command": {
     "version": {
       "allowBranch": "master"
