--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "qiao-monorepo",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "prepare": "husky install",
-    "clean": "lerna clean -y && lerna exec 'rm -rf package-lock.json'",
-    "init": "lerna bootstrap",
     "build": "lerna run build",
     "prettier": "prettier --write .",
     "eslintfix": "eslint . --ext .js --fix",
     "test": "lerna run test",
     "lint": "npm run build && npm run prettier && npm run eslintfix && npm run test",
-    "postinstall": "npm run clean && npm run init && npm run lint",
+    "postinstall": "npm run lint",
     "pb": "lerna publish",
     "graph": "nx graph",
     "check": "ncu && lerna exec ncu --concurrency=1 --ignore=qiao-oss",
@@ -20,26 +21,26 @@
   },
   "devDependencies": {
     "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-node-resolve": "^15.1.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "@commitlint/cli": "^17.6.3",
-    "@commitlint/config-conventional": "^17.6.3",
+    "@commitlint/cli": "^17.6.5",
+    "@commitlint/config-conventional": "^17.6.5",
     "ava": "^5.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.41.0",
+    "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "fake-indexeddb": "^4.0.1",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
     "lerna": "^6.6.2",
     "lint-staged": "^13.2.2",
-    "nx": "^16.2.2",
+    "nx": "^16.3.2",
     "prettier": "^2.8.8",
-    "qiao-lerna": "^3.3.1",
-    "qiao-webpack": "^3.3.2",
-    "rollup": "^3.23.0"
+    "qiao-lerna": "^3.3.4",
+    "qiao-webpack": "^3.3.4",
+    "rollup": "^3.25.1"
   }
 }
