--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "scripts": {
     "prepare": "husky install",
     "build": "lerna run build",
-    "prettier": "prettier --write .",
-    "eslintfix": "eslint . --ext .js --fix",
+    "prettier": "qpro prettier",
+    "eslint": "qpro eslint",
     "test": "lerna run test",
-    "lint": "npm run build && npm run prettier && npm run eslintfix && npm run test",
+    "lint": "npm run build && npm run test && npm run prettier && npm run eslint",
     "postinstall": "npm run lint",
     "pb": "lerna publish",
     "graph": "nx graph",
@@ -21,26 +21,22 @@
   },
   "devDependencies": {
     "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.2.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.6.2",
-    "jest-environment-jsdom": "^29.6.2",
+    "@rollup/plugin-node-resolve": "^15.2.1",
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "ava": "^5.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.47.0",
-    "eslint-config-prettier": "^9.0.0",
     "fake-indexeddb": "^4.0.2",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
-    "lerna": "^7.1.5",
-    "lint-staged": "^14.0.0",
-    "nx": "^16.7.2",
-    "prettier": "^3.0.2",
-    "qiao-lerna": "^3.3.9",
-    "qiao-webpack": "^3.3.9",
-    "rollup": "^3.28.0"
+    "lerna": "^7.2.0",
+    "lint-staged": "^14.0.1",
+    "nx": "^16.8.1",
+    "qiao-lerna": "^3.5.5",
+    "qiao-webpack": "^3.5.5",
+    "qiao-project": "^3.5.6",
+    "rollup": "^3.29.0"
   }
 }
