--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "lerna run test",
     "lint": "npm run build && npm run test && npm run prettier && npm run eslint",
     "postinstall": "npm run lint",
+    "cz": "qpro commitizen",
     "pb": "lerna publish",
     "graph": "nx graph",
     "check": "ncu && lerna exec ncu --concurrency=1 --ignore=qiao-oss",
@@ -22,21 +23,20 @@
   "devDependencies": {
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.2.1",
-    "jest": "^29.6.4",
-    "jest-environment-jsdom": "^29.6.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "ava": "^5.3.1",
-    "cz-conventional-changelog": "^3.3.0",
     "fake-indexeddb": "^4.0.2",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
-    "lerna": "^7.2.0",
+    "lerna": "^7.3.0",
     "lint-staged": "^14.0.1",
-    "nx": "^16.8.1",
-    "qiao-lerna": "^3.5.5",
-    "qiao-webpack": "^3.5.5",
-    "qiao-project": "^3.5.6",
-    "rollup": "^3.29.0"
+    "nx": "^16.9.1",
+    "qiao-lerna": "^3.6.7",
+    "qiao-webpack": "^3.6.7",
+    "qiao-project": "^3.6.7",
+    "rollup": "^3.29.4"
   }
 }
