--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
     "cz": "qpro commitizen",
     "pb": "lerna publish",
     "graph": "nx graph",
-    "check": "ncu && lerna exec ncu --concurrency=1 --ignore=qiao-oss",
-    "update": "ncu -u && lerna exec 'ncu -u' --concurrency=1 --ignore=qiao-oss",
+    "check": "ncu && lerna exec ncu --concurrency=1",
+    "update": "ncu -u && lerna exec 'ncu -u' --concurrency=1",
     "pkg": "qlerna pkg ./packages",
     "dpkg": "qlerna pkg ./packages dev"
   },
   "devDependencies": {
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-json": "^6.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "@commitlint/cli": "^17.7.1",
+    "@commitlint/cli": "^17.7.2",
     "@commitlint/config-conventional": "^17.7.0",
     "ava": "^5.3.1",
     "fake-indexeddb": "^4.0.2",
@@ -33,10 +33,10 @@
     "jsdom": "^22.1.0",
     "lerna": "^7.3.0",
     "lint-staged": "^14.0.1",
-    "nx": "^16.9.1",
-    "qiao-lerna": "^3.6.8",
-    "qiao-webpack": "^3.6.7",
-    "qiao-project": "^3.6.7",
-    "rollup": "^3.29.4"
+    "nx": "^16.10.0",
+    "qiao-lerna": "^4.0.8",
+    "qiao-webpack": "^4.0.7",
+    "qiao-project": "^4.0.7",
+    "rollup": "^4.0.2"
   }
 }
