--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "graph": "nx graph",
     "check": "ncu && lerna exec ncu --concurrency=1",
     "update": "ncu -u && lerna exec 'ncu -u' --concurrency=1",
-    "pkg": "qlerna pkg ./packages",
-    "dpkg": "qlerna pkg ./packages dev"
+    "pkg": "qpro pkg ./packages",
+    "dpkg": "qpro pkg ./packages dev"
   },
   "devDependencies": {
     "@rollup/plugin-json": "^6.0.1",
-    "@rollup/plugin-node-resolve": "^15.2.2",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "@commitlint/cli": "^17.7.2",
@@ -34,9 +34,8 @@
     "lerna": "^7.3.0",
     "lint-staged": "^14.0.1",
     "nx": "^16.10.0",
-    "qiao-lerna": "^4.0.8",
     "qiao-webpack": "^4.0.7",
-    "qiao-project": "^4.0.7",
+    "qiao-project": "^4.0.9",
     "rollup": "^4.0.2"
   }
 }
