--- a/packages/qiao-algorithm/package.json
+++ b/packages/qiao-algorithm/package.json
@@ -22,7 +22,7 @@
     "url": "https://github.com/uikoo9/qiao-web/issues"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "qpro rollup ./rollup.config.js",
     "test": "ava"
   },
   "nx": {
