--- a/packages/qiao-weixinx/package.json
+++ b/packages/qiao-weixinx/package.json
@@ -9,7 +9,7 @@
     "tools"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://code.insistime.com/qiao-weixinx",
+  "homepage": "https://code.insistime.com/#qiao-weixinx",
   "license": "MIT",
   "main": "index.js",
   "repository": {
