--- a/packages/offline-to-online/package.json
+++ b/packages/offline-to-online/package.json
@@ -8,7 +8,7 @@
     "browser"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://code.insistime.com/offline-to-online",
+  "homepage": "https://code.insistime.com/#offline-to-online",
   "license": "MIT",
   "main": "index.js",
   "module": "src/index.js",
