--- a/packages/qiao-is-online/package.json
+++ b/packages/qiao-is-online/package.json
@@ -8,7 +8,7 @@
     "offline to online"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://code.insistime.com/qiao-is-online",
+  "homepage": "https://code.insistime.com/#qiao-is-online",
   "license": "MIT",
   "main": "index.js",
   "module": "src/index.js",
