--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "lerna": "^8.1.2",
     "lint-staged": "^15.2.2",
     "nx": "^18.0.7",
-    "qiao-project": "^4.5.1",
-    "qiao-webpack": "^4.5.1"
+    "qiao-project": "^4.5.1"
   }
 }
