--- a/packages/qiao-compress/package.json
+++ b/packages/qiao-compress/package.json
@@ -12,7 +12,7 @@
     "tgz"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://code.insistime.com/#qiao-compress",
+  "homepage": "https://code.vincentqiao.com/#qiao-compress",
   "license": "MIT",
   "main": "index.js",
   "repository": {
