--- a/packages/qiao-request/package.json
+++ b/packages/qiao-request/package.json
@@ -10,7 +10,7 @@
     "imcp"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://code.insistime.com/#qiao-request",
+  "homepage": "https://code.vincentqiao.com/#qiao-request",
   "license": "MIT",
   "main": "index.js",
   "repository": {
