--- a/packages/qiao-weixin/package.json
+++ b/packages/qiao-weixin/package.json
@@ -9,7 +9,7 @@
     "weixin nodejs"
   ],
   "author": "uikoo9 <uikoo9@qq.com>",
-  "homepage": "https://code.insistime.com/#qiao-weixin",
+  "homepage": "https://code.vincentqiao.com/#qiao-weixin",
   "license": "MIT",
   "main": "index.js",
   "repository": {
